
Improvements
---------------------

* LUCENE-10416: Update Korean Dictionary to mecab-ko-dic-2.1.1-20180720 for Nori.
  (Uihyun Kim)

* LUCENE-10614: Properly support getTopChildren in RangeFacetCounts. (Yuting Gan)

* LUCENE-10652: Add a top-n range faceting example to RangeFacetsExample. (Yuting Gan)

Optimizations
---------------------

* GITHUB#11857, GITHUB#11859, GITHUB#11893, GITHUB#11909: Hunspell: improved suggestion performance

Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until
  they reach the maximum merge size. (Adrien Grand)

Other
---------------------

* LUCENE-10376: Roll up the loop in VInt/VLong in DataInput. (Guo Feng)

* LUCENE-10283: The minimum required Java version was bumped from 11 to 17.
  (Adrien Grand, Uwe Schindler, Dawid Weiss, Robert Muir)

* LUCENE-10253: The @BadApple annotation has been removed from the test
  framework. (Adrien Grand)

* LUCENE-10393: Unify binary dictionary and dictionary writer in Kuromoji and Nori.
  (Tomoko Uchida, Robert Muir)

* LUCENE-10475: Merge dictionary builders in `util` package into `dict` package in Kuromoji and Nori.
  All classes in `org.apache.lucene.analysis.[ja|ko].util` was moved to `org.apache.lucene.analysis.[ja|ko].dict`.
  (Tomoko Uchida)

* LUCENE-10493: Factor out Viterbi algorithm in Kuromoji and Nori to analysis-common. (Tomoko Uchida)

* GITHUB#977, LUCENE-9500: Remove the deflater hack introduced because of JDK-8252739 (Uwe Schindler)

======================== Lucene 9.5.0 =======================

API Changes
---------------------
* GITHUB#11742: MatchingFacetSetsCounts#getTopChildren now properly returns "top" children instead
  of all children. (Greg Miller)

* GITHUB#11772: Removed native subproject and WindowsDirectory implementation from lucene.misc. Recommendation:
  use MMapDirectory implementation on Windows. (Robert Muir, Uwe Schindler, Dawid Weiss)
